[package]
name = "payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
yup-oauth2 = { version = "11.0.0", features = ["service-account"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3"
